Squashed commit of the following:
commit 1d905bd14a239ddc1c1e0fc47017fef9b9268351
Author: Sergii Dzhepa <sdzhepa@ebay.com>
Date:   Fri Aug 3 18:24:56 2012 +0300

    [TEST] Add @depends of preconditions method

commit d3c84e21522b22c36398bde8cbc530e9b4eaf628
Author: iryna.lagno <ilagno@ebay.com>
Date:   Fri Aug 3 18:21:54 2012 +0300

    Merge result with KIEV-QA-Folks and KIEV-QA-Folks-S5
    Conflicts:
    	dev/tests/functional/fixture/enterprise2/core/Mage/AdminUser/data/AdminUserRole.yml
    	dev/tests/functional/fixture/enterprise2/core/Mage/Product/data/Product.yml
    	dev/tests/functional/testsuite/Enterprise2/Mage/CustomerSegment/Helper.php
    Squashed commit of the following:

    commit dd08c7c542a71964557f9416e340e81b268a6990
    Author: iryna.lagno <ilagno@ebay.com>
    Date:   Mon Jul 30 20:25:59 2012 +0300

         Merge result with KIEV-QA-FOLKS-MERGETWO-2061.
        Squashed commit of the following:

        commit f0be0e398314fd7b4f91afa65f3e97625ec9d02b
        Author: iryna.lagno <ilagno@ebay.com>
        Date:   Mon Jul 30 17:31:11 2012 +0300

            [TEST] MAGETWO-2361. Add changes to test description.

        commit ce45c850ff5978e493292b08c80f072db99fecf5
        Author: iryna.lagno <ilagno@ebay.com>
        Date:   Mon Jul 30 17:06:07 2012 +0300

            [TEST] MAGETWO-2361. Add changes to test description(fix problem with spaces).

        commit 7331ddd4f7082bf6d031f1cf015bc35a6d2099fa
        Author: iryna.lagno <ilagno@ebay.com>
        Date:   Mon Jul 30 16:28:23 2012 +0300

            [TEST] MAGETWO-2361. Add changes to test description.

        commit 79455bb72662686a634c54571dd1314e91209848
        Author: iryna.lagno <ilagno@ebay.com>
        Date:   Mon Jul 30 14:01:22 2012 +0300

            [TEST] MAGETWO-2361. Rename typo in the name of Test

        commit 6929adb41fb26ef258501466e7311386734d9eed
        Author: iryna.lagno <ilagno@ebay.com>
        Date:   Mon Jul 30 11:28:44 2012 +0300

            [TEST] [DATA

--- a/dev/tests/functional/fixture/community2/core/Mage/_uimapIncludes/admin.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/_uimapIncludes/admin.yml
@@ -36,5 +36,6 @@ admin_header:
                     general_elements:
                         pageelements:
                             navigation_menu_items: //ul[@id='nav']/li
+                            navigation_children_menu_items: //*[@id='nav']/li/ul/li
                             general_menu_xpath: //*[@id='nav']/li[contains(@class, 'active')]//a[contains(@href, '%mcaXpath%')]
                             active_menu_element: //*[@id='nav']/li[contains(@class, 'active')]
