--- a/dev/tests/functional/fixture/community2/core/Mage/AdminUser/uimap/admin/AdminUsers.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/AdminUser/uimap/admin/AdminUsers.yml
@@ -58,4 +58,16 @@ new_role:
 # 'Edit Role' page
 edit_role:
     mca: user_role/editrole/rid/%id%/
+    uimap:
+        form:
+             tabs:
+                -
+                    role_resources:
+                        fieldsets:
+                            -
+                                role_resources:
+                                    links:
+                                        root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
+                                        sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
+                                        expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
     
