--- a/fixture/default/core/Mage/Tag/uimap/admin/Tag.yml
+++ b/fixture/default/core/Mage/Tag/uimap/admin/Tag.yml
@@ -49,6 +49,7 @@ all_tags:
             success_changed_status: //li[normalize-space(@class)='success-msg' and contains(.,'Total of %qtyDeletedTags% record(s) have been updated.')]
             confirmation_for_delete: Are you sure you want to do this?
             confirmation_for_massaction_delete: Are you sure?
+            select_items_to_delete: Please select items.
             tag_already_exists: //li[@class='error-msg' and contains(.,'Tag already exists.')]
             required_name: //div[@id='advice-required-entry-name' and text()='This is a required field.']
 
@@ -191,3 +192,4 @@ pending_tags:
                             products_to: //input[@id='pending_grid_filter_products_to']
                             customers_from: //input[@id='pending_grid_filter_customers_from']
                             customers_to: //input[@id='pending_grid_filter_customers_to']
+        messages: *tagsMesssages
