--- a/fixture/enterprise2/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
+++ b/fixture/enterprise2/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
@@ -44,6 +44,30 @@ system_configuration:
                                         landing_page_restriction: //*[@id='general_restriction_cms_page']
                                         http_response: //*[@id='general_restriction_http_status']
                 -
+                    general_design:
+                        fieldsets:
+                            -
+                                search_engine_robots:
+                                    xpath: //fieldset[@id='design_search_engine_robots']
+                                    fields:
+                                        edit_custom_instruction: //textarea[@name='groups[search_engine_robots][fields][custom_instructions][value]']
+                                    dropdowns:
+                                        default_robots: //select[@name='groups[search_engine_robots][fields][default_robots][value]']
+                                    checkboxes:
+                                        display_demo_store_notice_use_default: //input[@name='groups[head][fields][demonotice][inherit]']
+                                    buttons:
+                                        reset_to_default_robots: //button[span='Reset to Default']
+                -
+                    catalog_google_sitemap:
+                        fieldsets:
+                            -
+                                search_engine_submission_settings:
+                                    xpath: //fieldset[@id='sitemap_search_engines']
+                                    links:
+                                        search_engine_submission_settings_link: //parent::div//a[@id='sitemap_search_engines-head']
+                                    dropdowns:
+                                        enable_submission_to_robots: //select[@name='groups[search_engines][fields][submission_robots][value]']
+                -
                     catalog_catalog:
                         fieldsets:
                             -
@@ -62,7 +86,6 @@ system_configuration:
                                         allow_browsing_customer_groups: //select[@id='catalog_enterprise_catalogpermissions_grant_catalog_category_view_groups']
                                         display_prices_customer_groups: //select[@id='catalog_enterprise_catalogpermissions_grant_catalog_product_price_groups']
                                         allow_adding_to_cart_customer_groups: //select[@id='catalog_enterprise_catalogpermissions_grant_checkout_items_groups']
-
                 -
                     sales_sales:
                         fieldsets:
