--- a/fixture/community2/core/Mage/UrlRewrite/uimap/admin/UrlRewrite.yml
+++ b/fixture/community2/core/Mage/UrlRewrite/uimap/admin/UrlRewrite.yml
@@ -26,7 +26,7 @@
 ---
 #URL Rewrite pages
 
-manage_urlrewrites:
+url_rewrite_management:
     mca: urlrewrite/
     click_xpath: //div[@class='nav-bar']//a[span='URL Rewrite Management']
     title: Rewrite Rules / Magento Admin
