--- a/dev/tests/functional/fixture/community2/core/Mage/Newsletter/uimap/admin/Newsletter.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/Newsletter/uimap/admin/Newsletter.yml
@@ -28,19 +28,19 @@ newsletter_templates:
                             date_updated_to: //input[@name='modified_at[to]']
                             template_subject: //input[@name='subject']
                             sender_name: //input[@name='sender']
-                        buttons:
-                            add_new_template: //button[span='Add New Template']
-                            reset_filter: //button[span='Reset Filter']
-                            search: //button[span='Search']
-                        dropdowns:
-                            template_type: //select[@name='type']
+        buttons:
+            add_new_template: //button[span='Add New Template']
+            reset_filter: //button[span='Reset Filter']
+            search: //button[span='Search']
+        dropdowns:
+            template_type: //select[@name='type']
 
 # 'New Newsletter Template' Page
 new_newsletter_template:
     mca: newsletter_template/new
     title: New Template / Newsletter Templates / Newsletter / Magento Admin
     uimap:
-        form: &createNewNewsletterTemplate
+        form: createNewNewsletterTemplate
             fieldsets:
                 -
                     newsletter_add_template:
@@ -58,4 +58,5 @@ new_newsletter_template:
             preview_template: //button[span='Preview Template']
             save_template: //button[span='Save Template']
         messages:
+            success_saved_template: //li[normalize-space(@class)='success-msg' and contains(.,'The newsletter template has been saved.')]
             empty_required_field: "%fieldXpath%/following-sibling::*[contains(., 'This is a required field.') and not(contains(@style,'display: none;'))]"
