--- a/dev/tests/functional/fixture/community2/core/Mage/Newsletter/uimap/admin/Newsletter.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/Newsletter/uimap/admin/Newsletter.yml
@@ -40,7 +40,7 @@ new_newsletter_template:
     mca: newsletter_template/new
     title: New Template / Newsletter Templates / Newsletter / Magento Admin
     uimap:
-        form: createNewNewsletterTemplate
+        form: &createNewNewsletterTemplate
             fieldsets:
                 -
                     newsletter_add_template:
