--- a/fixture/community2/core/Mage/Newsletter/uimap/admin/Newsletter.yml
+++ b/fixture/community2/core/Mage/Newsletter/uimap/admin/Newsletter.yml
@@ -34,10 +34,12 @@ newsletter_templates:
             search: //button[span='Search']
         dropdowns:
             template_type: //select[@name='type']
+        messages:
+            success_saved_template: //li[normalize-space(@class)='success-msg' and contains(.,'The newsletter template has been saved.')]
 
 # 'New Newsletter Template' page
 new_newsletter_template:
-    mca: newsletter_template/new
+    mca: newsletter_template/new/
     title: New Template / Newsletter Templates / Newsletter / Magento Admin
     uimap:
         form: &createNewNewsletterTemplate
@@ -58,5 +60,4 @@ new_newsletter_template:
             preview_template: //button[span='Preview Template']
             save_template: //button[span='Save Template']
         messages:
-            success_saved_template: //li[normalize-space(@class)='success-msg' and contains(.,'The newsletter template has been saved.')]
             empty_required_field: "%fieldXpath%/following-sibling::*[contains(., 'This is a required field.') and not(contains(@style,'display: none;'))]"
