[TEST][DATA] - MAGETWO-2673 implemented TC-5503

--- a/fixture/community2/core/Mage/UrlRewrite/data/UrlRewrite.yml
+++ b/fixture/community2/core/Mage/UrlRewrite/data/UrlRewrite.yml
@@ -47,3 +47,6 @@ simple_product_required:
     inventory_qty: %noValue%
     websites: Main Website
     categories: Default Category
+
+url_rewrite_product:
+    request_path: %randomize%.html
