--- a/dev/tests/functional/fixture/enterprise2/core/Mage/AutomatedEmailReminderRules/uimap/admin/AutomatedEmailReminderRules.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/AutomatedEmailReminderRules/uimap/admin/AutomatedEmailReminderRules.yml
@@ -39,6 +39,8 @@ manage_automated_email_reminder_rules:
             add_new_rule: //button[span='Add New Rule']
         messages:
             success_saved_rule: //li[normalize-space(@class)='success-msg' and contains(.,'The reminder rule has been saved.')]
+        pageelements:
+                    access_denied: //*[@id='page:main-container']/h1[text()='Access denied']
 
 create_automated_email_reminder_rule:
     mca: reminder/new/
