--- a/fixture/enterprise2/core/Mage/Attributes/CustomerAddressAttribute/uimap/admin/CustomerAddressAttribute.yml
+++ b/fixture/enterprise2/core/Mage/Attributes/CustomerAddressAttribute/uimap/admin/CustomerAddressAttribute.yml
@@ -1,28 +1,11 @@
 #
-# Magento
+# {license_notice}
 #
-# NOTICE OF LICENSE
-#
-# This source file is subject to the Academic Free License (AFL 3.0)
-# that is bundled with this package in the file LICENSE_AFL.txt.
-# It is also available through the world-wide-web at this URL:
-# http://opensource.org/licenses/afl-3.0.php
-# If you did not receive a copy of the license and are unable to
-# obtain it through the world-wide-web, please send an email
-# to license@magentocommerce.com so we can send you a copy immediately.
-#
-# DISCLAIMER
-#
-# Do not edit or add to this file if you wish to upgrade Magento to newer
-# versions in the future. If you wish to customize Magento for your
-# needs please refer to http://www.magentocommerce.com for more information.
-#
-# @category    tests
-# @package     selenium
-# @subpackage  uimaps
-# @author      Magento Core Team <core@magentocommerce.com>
-# @copyright   Copyright (c) 2012 Magento Inc. (http://www.magentocommerce.com)
-# @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+# @category    Magento
+# @package     Mage_Attributes_CustomerAddressAttribute
+# @subpackage  functional_tests
+# @copyright   {copyright}
+# @license     {license_link}
 #
 ---
 # Manage Customer Address and related pages
@@ -148,7 +131,7 @@ new_customer_address_attribute:
 # Manage Customer Address  Attributes page
 edit_customer_address_attribute:
     mca: customer_address_attribute/edit/attribute_id/%id%/
-    title: %attribute_code% / Manage Customer Address Attributes / Magento Admin
+    title: %admin_title% / Manage Customer Address Attributes / Magento Admin
     uimap:
         form: &editAddressAttributeForm
             tabs:
