--- a/dev/tests/functional/fixture/community2/core/Mage/CatalogPriceRule/uimap/admin/CatalogPriceRule.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/CatalogPriceRule/uimap/admin/CatalogPriceRule.yml
@@ -2,7 +2,7 @@
 # {license_notice}
 #
 # @category    Magento
-# @package     Mage_ShoppingCartPriceRule
+# @package     Mage_CatalogPriceRule
 # @subpackage  functional_tests
 # @copyright   {copyright}
 # @license     {license_link}
@@ -13,5 +13,4 @@
 manage_catalog_price_rules:
     uimap:
         pageelements:
-
            access_denied: //*[@id='page:main-container']/h1[text()='Access denied']
